<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AKG Bensheim</string>
    <string name="refresh_description">Aktualisieren</string>
    <string name="thisWeek">Diese Woche</string>
    <string name="nextWeek">Nächste Woche</string>
    <string name="title_activity_info">Informationen</string>
    <string name="info_description">Info</string>
    <string name="settings_description">(keine) Einstellungen</string>
    <string name="klausuren_description">Klausurplan</string>
    <string name="homepage_description">AKG-Homepage</string>
    <string name="baender_description">Bänderplan</string>
    <string name="title_activity_document">Dokumentanzeige (beta)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>