<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/menu_info"
        android:title="@string/info_description"
        android:enabled="true"
        android:visible="true">
    </item>
    
    <item android:id="@+id/menu_settings"
        android:title="@string/settings_description"
        android:enabled="true"
        android:visible="true">
    </item>
    
    <item android:id="@+id/menu_klausuren"
        android:title="@string/klausuren_description"
        android:enabled="true"
        android:visible="true">
    </item>
    
    <item android:id="@+id/menu_baender"
        android:title="@string/baender_description"
        android:enabled="true"
        android:visible="true">
    </item>
    
</menu>